# oath-keepers

./: .gitignore  LICENSE  README.md  cpu.sh  fastagent.config.yaml  fastagent.secrets.yaml  main.py  pyproject.toml  secrets.json  vllm-cpu.sh
.github/workflows/: ci.yml
agents/: trusted_agent.py  verifier_agent.py
data/master/: DOID.tsv  SYMP.tsv
data/relationship/: doid_symp.tsv  symp2doid_by_axiom.tsv  symp2doid_by_keyword.tsv  symp2doid_by_levenshtein.tsv  symp2doid_by_semantic.tsv  symp_fma.tsv
docs/: fast-agents.md  repository.md
docs/papers/: 2412.03719v2.md  2504.05410v1.md  2504.13139v2.md  2506.07956v1.md
experiment/20250824/: advanced_response_agent.py  response_agent.py
oath_keepers/: stt_client.py  types.py  vllm_client.py  vllm_server.py  whisper_server.py
oath_keepers/agents/: __init__.py  age_estimation_agent.py  age_estimator_agent.py  clarifier_agent.py  extractor_agent.py  response_agent.py
oath_keepers/data/relationship/: symp2doid_by_axiom.tsv  symp2doid_by_semantic.tsv
oath_keepers/log/: conversation_20250824_gemma-3-12b-it.txt  conversation_20250906_113943.txt  conversation_20250907_153532.txt  conversation_20250907_173150.txt  conversation_20250907_173150_extracted.json  conversation_20250915_212931.txt  conversation_20250915_212931_extracted.json  conversation_20251109_221558.txt  conversation_20251109_221558_extracted.json  conversation_20251110_002506.txt  conversation_20251110_002506_extracted.json  conversation_20251110_003018.txt  conversation_20251110_003018_extracted.json
oath_keepers/models/: age_models.py
oath_keepers/prompts/: age_estimator_prompt.md  age_estimator_prompt_ci.md  clarifier_prompt.md  extractor_prompt.md
oath_keepers/utils/: extractor_parser.py  typing.py
scripts/data_generator/: data.ipynb  readme.md
scripts/validation_data_generator/: README.md  data_downloader.py  dowloader.py  master_data_generator.py  symp2doid.py
scripts/validation_data_generator/config/: config.py
scripts/validation_data_generator/data/master/: DOID.tsv
scripts/validation_data_generator/data/relationship/: symp2doid_by_levenshtein.tsv
state-transfer/: agent_one.py  agent_two.py  fastagent.config.yaml  fastagent.secrets.yaml
tests/: test_age_estimation_agent.py  test_age_estimator_agent.py  test_extractor_parser.py  test_genlm.py  test_potentials.py  test_transcription_llm.py  test_vllm_agent.py  test_vllm_structured_output.py
